added close big-img function

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 <body>
     <div class="grid">
-        <img src="assets/plastic-textures-01.jpg" alt="imagen 1" class="img">
-        <img src="assets/plastic-textures-02.jpg" alt="imagen 1" class="img">
-        <img src="assets/plastic-textures-02.jpg" alt="imagen 1" class="img">
+        <img src="assets/plastic-textures-01.jpg" alt="imagen plastic 1" class="img">
+        <img src="assets/plastic-textures-02.jpg" alt="imagen plastic 1" class="img">
+        <img src="assets/plastic-textures-03.jpg" alt="imagen plastic 1" class="img">
+        <img src="assets/plastic-textures-04.jpg" alt="imagen plastic 1" class="img">
+        <img src="assets/plastic-textures-05.jpg" alt="imagen plastic 1" class="img">
     </div>
 
     <div class="lightbox">
