--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lightbox by Alfredo Alberruche</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
     <script defer src="js/index.js"></script>
 </head>
 
 <body>
+    <h1>Lightbox</h1>
     <div class="grid">
         <img src="assets/plastic-textures-01.jpg" alt="imagen plastic 1" class="img">
         <img src="assets/plastic-textures-02.jpg" alt="imagen plastic 1" class="img">
         <img src="assets/plastic-textures-03.jpg" alt="imagen plastic 1" class="img">
         <img src="assets/plastic-textures-04.jpg" alt="imagen plastic 1" class="img">
-        <img src="assets/plastic-textures-05.jpg" alt="imagen plastic 1" class="img">
     </div>
 
     <div class="lightbox">
